Add a few endpoints to user and improvements - add logger to previous classes - delete reponse handler
