# src/main/java/com/restaurant/app/user/controller/dto/PasswordRequest.java
@@ -1,0 +1,6 @@
+package com.restaurant.app.user.controller.dto;
+
+public record PasswordRequest(
+        String password
+) {
+}
