# src/main/java/com/restaurant/app/user/controller/validator/UserValidator.java
@@ -1,8 +1,7 @@
 package com.restaurant.app.user.controller.validator;
 
 import com.restaurant.app.user.controller.LoginRequest;
-import com.restaurant.app.user.controller.dto.ChangePasswordRequest;
-import com.restaurant.app.user.controller.dto.UserRequest;
+import com.restaurant.app.user.controller.dto.*;
 
 public class UserValidator {
 
@@ -30,5 +29,23 @@ public class UserValidator {
                 changePasswordRequest.currentPassword() == null ||
                 changePasswordRequest.currentPassword().trim().isEmpty() ||
                 changePasswordRequest.newPassword() == null || changePasswordRequest.newPassword().trim().isEmpty();
+    }
+
+    public boolean isUpdateUserRequestNotValid(UpdateUserRequest updateUserRequest) {
+        return !(updateUserRequest instanceof UpdateUserRequest) ||
+                updateUserRequest.name() == null || updateUserRequest.name().trim().isEmpty() ||
+                updateUserRequest.address() == null || updateUserRequest.address().trim().isEmpty() ||
+                updateUserRequest.phoneNumber() == null || updateUserRequest.phoneNumber().trim().isEmpty();
+    }
+
+    public boolean isPasswordRequestNotValid(PasswordRequest passwordRequest) {
+        return !(passwordRequest instanceof PasswordRequest) ||
+                passwordRequest.password() == null || passwordRequest.password().trim().isEmpty();
+    }
+
+    public boolean isUserChangePasswordRequestNotValid(UserChangePasswordRequest userChangePasswordRequest) {
+        return !(userChangePasswordRequest instanceof UserChangePasswordRequest) ||
+                userChangePasswordRequest.newPassword() == null ||
+                userChangePasswordRequest.newPassword().trim().isEmpty();
     }
 }
